# aws-athena-struct-to-json

./: README.md  convert.py  pyproject.toml
